# PythonCodeExercise

./: .env.example  .gitignore  .mcp.json  .pylintrc  ARCHITECTURE.md  CLAUDE.md  CLEAN-ARCHITECTURE.md  CLEAN_ARCHITECTURE_VISUAL.md  Makefile  README.md  circular-architecture-d3.html  clean-architecture-circular-radial.mermaid  clean-architecture-circular.mermaid  clean-architecture-onion.puml  cli-flow.puml  pyproject.toml
.github/workflows/: lint.yml  pylint.yml
docs/architecture/: ARCHITECTURE.md  CLEAN_ARCHITECTURE_VISUAL.md  aws-credentials-flow.puml  clean-architecture-simple.puml  clean-architecture.mermaid  cli-flow.puml  cli-sequence-diagram.puml  component-dependency-diagram.puml  makefile-workflow.puml  nvm-setup-workflow.puml  software-installation-flow.puml  ssh-setup-workflow.puml
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-clean-architecture-adoption.md  0003-yaml-configuration-over-environment-variables.md  0004-repository-organisation-strategy.md  0005-subprocess-over-gitpython.md  0006-dependency-injection-pattern.md  0007-value-objects-for-validation.md  0008-click-for-cli-framework.md  0009-software-installation-strategy.md  0010-ssh-key-automation.md  0011-test-strategy-and-coverage.md  0012-error-handling-approach.md  0013-aws-credentials-automation.md
src/clean_architecture_example/: main.py
src/clean_architecture_example/application/dto/: user_dto.py
src/clean_architecture_example/application/use_cases/: create_user_use_case.py  get_user_use_case.py  update_user_use_case.py
src/clean_architecture_example/domain/entities/: user.py
src/clean_architecture_example/domain/interfaces/: user_repository.py
src/clean_architecture_example/domain/value_objects/: email.py
src/clean_architecture_example/infrastructure/repositories/: file_user_repository.py  in_memory_user_repository.py
src/clean_architecture_example/presentation/cli/: user_cli.py
src/clean_architecture_example/shared/di/: container.py
src/clean_architecture_example/shared/exceptions/: domain_exceptions.py  repository_exceptions.py
src/setup_environment/: __init__.py
src/setup_environment/config/: aws_accounts.yaml  repositories.yaml  software.yaml
src/setup_environment/domain/entities/: __init__.py  (+6 more)
src/setup_environment/infrastructure/: __init__.py  repository_config_service.py
src/setup_environment/presentation/: __init__.py  cli.py
src/sum/: __init__.py  sum.py
tests/: test_clean_architecture_application.py  test_clean_architecture_di.py  test_clean_architecture_domain.py  test_clean_architecture_infrastructure.py  test_should_sum.py  test_sum.py
tests/setup_environment/integration/: test_setup_workflow.py
(+73 files in other folders)
